fix(alert): update styles for rtl (#17129)
- apply border correctly to 2 button mode in iOS
- radio: position icon correctly (fixes #16295)
- checkbox: position icon correctly
- remove scrollbar with radio/checkbox
- updates e2e test to include rtl

https://screenshot.ionicframework.com/5447404/d8bad6a

references #17012

--- a/core/src/themes/ionic.mixins.scss
+++ b/core/src/themes/ionic.mixins.scss
@@ -142,42 +142,30 @@
 // ----------------------------------------------------------
 
 @mixin multi-dir() {
-  @if $app-direction == multi {
-    $root: #{&};
-    @at-root [dir] {
-      #{$root} {
-        @content;
-      }
-    }
-  } @else {
-    @content;
-  }
+  @content;
+
+  // @if $app-direction == multi {
+  //   $root: #{&};
+  //   @at-root [dir] {
+  //     #{$root} {
+  //       @content;
+  //     }
+  //   }
+  // } @else {
+  //   @content;
+  // }
 }
 
 @mixin rtl() {
-  @if $app-direction == multi or $app-direction == null {
-    $root: #{&};
+  $root: #{&};
 
-    @at-root #{add-root-selector($root, "[dir=rtl]")} {
-      @content;
-    }
-
-  } @else if $app-direction == rtl {
+  @at-root #{add-root-selector($root, "[dir=rtl]")} {
     @content;
   }
 }
 
 @mixin ltr() {
-  @if $app-direction == multi {
-    $root: #{&};
-    @at-root [dir="ltr"] {
-      #{$root} {
-        @content;
-      }
-    }
-  } @else if $app-direction == ltr or $app-direction == null {
-    @content;
-  }
+  @content;
 }
 
 
